--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "express": "^4.17.1",
     "file-get-contents": "^1.0.0",
     "firebase": "^8.2.4",
+    "firebase-admin": "^9.4.2",
+    "mysql": "^2.18.1",
     "ngrok": "^3.4.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "router": "^1.3.5"
   }
 }
