--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "file-get-contents": "^1.0.0",
     "firebase": "^8.2.4",
     "firebase-admin": "^9.4.2",
+    "joi": "^17.3.0",
     "mysql": "^2.18.1",
     "ngrok": "^3.4.0",
     "request": "^2.88.2",
     "router": "^1.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
