--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "file-get-contents": "^1.0.0",
     "firebase": "^8.2.4",
     "firebase-admin": "^9.4.2",
     "firebase-key": "^2.0.2",
+    "heroku": "^7.47.12",
     "joi": "^17.3.0",
     "mysql": "^2.18.1",
     "ngrok": "^3.4.0",
+    "node-fetch": "^2.6.1",
     "request": "^2.88.2",
     "router": "^1.3.5"
   },
