--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "wechat_backnode",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x",
+    "yarn": "1.x"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
