--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase-admin": "^9.4.2",
     "firebase-key": "^2.0.2",
     "heroku": "^7.47.12",
+    "image-to-base64": "^2.1.1",
     "joi": "^17.3.0",
     "mysql": "^2.18.1",
     "ngrok": "^3.4.0",
